fix(Icon): Icon alignment.

--- a/src/input/style/index.less
+++ b/src/input/style/index.less
@@ -90,7 +90,6 @@
     padding-left: 30px;
   }
   i[class^="w-icon-"]:before{
-    top: 2px;
     position: relative;
   }
 }
